fixed index css for nav a color, logo size, get started button position, alignment of text content

--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,265 @@
 
 *{
     box-sizing: border-box;
-    padding:0;
     margin:0;
-    border: 1px solid grey;
+    border: 0;
     width: 100%;
+	padding: 0 20px;
+	font-size: 100%;
+	font: inherit;
+    vertical-align: baseline;
 }
+.container{
+
+}
+
+body {
+	line-height: 1;
+}
+
+header {
+	display: flex;
+	justify-content: space-evenly;
+	margin: 0 0 30px 0;
+}
+
+.logo {
+    width: 20%;
+}
+
+h4{
+	font-size: 27px;
+}
+
+a{
+	padding: 0;
+}
+
+nav {
+	display: flex;
+	justify-content: space-between;
+	flex-grow: 1;
+    align-items: center;
+}
+
+nav a{
+    text-decoration: none;
+    color: grey;
+}
+
+.cta{
+	display: flex;
+	justify-content: space-evenly;
+	padding: 0 0 40px 0;
+}
+
+.cta-text{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	
+}
+
+.cta-text h1{
+	font-size: 70px;
+	text-align: center;
+}
+
+
+
+.middle-img{
+	width:100%;
+	padding: 0;
+}
+
+.learn-btn {
+	background-color: white;
+	border: 1px solid black;
+	width: 150px; 
+	padding: 5px 10px;
+	border-radius: 5px;
+}
+
+.btn-container{
+    display:flex;
+    justify-content: center;
+}
+
+.btn-container button{
+    display:flex;
+    justify-content: center;
+	background-color: white;
+	border: .5px solid black;
+	width: 170px; 
+	padding: 5px 10px;
+}
+
+.top-content{
+	display: flex;
+	border-top: 1px solid black;
+	padding: 30px 0; 
+	justify-content: 
+}
+
+.top-content .text-content{
+    padding: 0;
+ }
+ 
+ .top-content .text-content h4{
+     padding: 0;
+  }
+ 
+  .top-content .text-content p{
+     padding: 0;
+  }
+
+.bottom-content{
+	display: flex;
+	border-bottom: 1px solid black;
+    padding: 30px 0;
+}
+
+.bottom-content .text-content{
+   padding: 0;
+}
+
+.bottom-content .text-content h4{
+    padding: 0;
+ }
+
+ .bottom-content .text-content p{
+    padding: 0;
+ }
+
+.top-content-services{
+	display: flex;
+	border-bottom: 1px solid black;
+	padding: 30px 0px;
+	margin: 0 40px 0 40px;
+}
+
+.top-content-services .text-content{
+	padding: 0;
+}
+
+.top-content-services .text-content h4{
+	padding: 0;
+}
+
+.top-content-services .text-content p{
+	padding: 0;
+	font-size: 20px;
+}
+
+
+.contact{
+	margin: 30px 0;
+	display: flex;
+	flex-direction: column;
+	padding: 0 0 0 0;
+}
+
+
+.line-height-double{
+	line-height: 200%;
+	align-items: flex-start;
+	margin: 5px 0 0 0;
+}
+
+footer{
+	display: flex;
+	justify-content: center;
+}
+
+.services-header-img{
+	width:100%;
+	padding: 0 40px;
+}
+
+.services-middle{
+	display: flex;
+	flex-wrap: wrap;
+	padding: 30px 10px; 
+	justify-content: space-evenly;
+}
+
+.service-content{
+	width: 40%;
+	padding: 20px;
+	margin: 30px;
+	border: 1px solid black;
+	background-color: rgb(235, 233, 233);
+}
+
+.service-content p{
+	padding: 15px 0;
+	font-size: 20px;
+}
+
+.about-services{
+	display: flex;
+	border-top: 1px solid black;
+	padding: 30px 0 0;
+	margin: 30px 40px;
+}
+
+.as-text{
+	padding: 0 0;
+}
+.as-text p{
+	padding: 0 0 0 0;
+}
+
+.services-info-img{
+	padding: 0;
+}
+
+li{
+	list-style-type: disc;
+
+}
+
+.services-list{
+	margin: 10px 0;
+	line-height: 200%;
+}
+
+h5 {
+	padding: 0 0 0 0;
+	font-size: 22px;
+}
+
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
